# slides

./: .gitignore  manage.py  pyproject.toml
slide_viewer/: asgi.py  settings.py  urls.py  wsgi.py
slides/: admin.py  forms.py  models.py  urls.py  views.py
slides/migrations/: 0001_initial.py  0002_alter_box_options_alter_filmstock_options_and_more.py  0003_alter_box_label_slide.py  0004_remove_box_filmstock_delete_filmstock.py  0005_alter_box_label.py  0006_slide_marked.py  0007_collection_alter_box_options_collectionslide_and_more.py  0008_alter_collectionslide_options_and_more.py  0009_collection_collection_order.py  0010_alter_box_options_alter_collection_options_and_more.py
slides/static/css/: slides.css
slides/static/scripts/: image_viewer.js
slides/templates/slides/: add_box.html  add_slide.html  base.html  box.html  collection.html  collections.html  form.html  image_list_base.html  image_thumbs.html  image_viewer.html  index.html  update_slide.html  year.html  years.html
